# main.go
@@ -30,40 +30,20 @@ func main() {
 }
 
 func Routes(app *fiber.App) {
-	proj1 := app.Group("/proj1")
 
-	proj1.Post("/add/", route.Add)
-	proj1.Get("/get/:id", route.Get)
-	proj1.Get("/gets/", route.GetAll)
-	proj1.Delete("/delete/:id", route.Delete)
-	proj1.Put("/update/", route.Update)
-
-	///get data from another schema------------------------
-	app.Get("/getthis", route.Return2)
-	//transaring data from another schema------------------
-	app.Get("/updatesss", route.UpdatingData)
-	//getting data from another api
-
-	app.Post("/json", route.GEttingMtfks)
-	// app.Post("/gettingUsingInterface", route.GetusersUsingDynamicStruct)
-	app.Post("/twodata", route.Tryit)
-	/*
-		janus
-
-	*/
 	janus := app.Group("/janus")
 	//janus customer savings list
 	janus.Post("/customerSavings", route.CustSavings)
 	//search loan list using cid
 	janus.Post("/loanlist", route.SearchLoanList)
 	///CoreAccounts/API/mobile/api/v1/SearchCustomerCID
-
 	janus.Post("/consuming", route.Consuming)
 	janus.Post("/searchCID", route.Consuming)
 	janus.Post("/loanInfoJanus", route.LoanInfoJanus)
-
 	janus.Post("/custSavingInfoJanus", route.CustSavingInfoJanus)
-	janus.Post("/generateColshit", route.GenerateColCidJanus)
+	janus.Post("/generateCol", route.GenerateColCidJanus)
+	janus.Post("/OpenPaymentTransaction", route.OpenPayment)
+	janus.Post("/multiplePayment", route.MultiplePayment)
 	/*
 		swagger hard coded data
 	*/
@@ -87,42 +67,3 @@ func unique(s []int) []int {
 	}
 	return result
 }
-
-func getUserInfo(userID int) map[string]interface{} {
-	user := make(map[string]interface{})
-	database.DB.Table("users").Select("user_id, fullname, email, address").Find(&user, "user_id", userID)
-	return user
-}
-
-func getProductDetails(product_id []uint) []map[string]interface{} {
-	// product := make(map[string]interface{})
-	result := []map[string]interface{}{}
-
-	// product := []models.Product{}sa
-	database.DB.Debug().Table("products p").
-		Select("p.product_id, p.name, p.description, p.images, p.stars, c.quantity_ordered").
-		Joins("JOIN addtocarts c ON p.product_id = c.product_id").Where("p.product_id IN ?", product_id).Find(&result)
-	// fmt.Println(product)
-	return result
-}
-
-/*
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/CoreAccounts/API/custSavingInfo
-
-
-/CoreAccounts/API/generateColShtperCID
-*/
